--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,28 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-  version="4.0" metadata-complete="false">
+	version="4.0" metadata-complete="false">
 
-  <description>
+	<description>
   웹 에플리케이션에 대한 설명을 이태그에 넣는다
 </description>
-  <display-name>웹 에플리케이션에 대한 이름을 이태그에 넣는다</display-name>
-
-  <!-- https://docs.spring.io/spring/docs/5.1.4.RELEASE/spring-framework-reference/web.html#spring-web -->
+	<display-name>웹 에플리케이션에 대한 이름을 이태그에 넣는다</display-name>
 
 
+	<!-- 필터 -->
+	<filter>
+		<filter-name>f1</filter-name>
+		<filter-class>Study.ex02.Filter01</filter-class>
+	</filter>
+	<filter>
+		<filter-name>f2</filter-name>
+		<filter-class>Study.ex02.Filter02</filter-class>
+	</filter>
 
+	<filter-mapping>
+		<filter-name>f1</filter-name>
+		<url-pattern>/ex02/*</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>f2</filter-name>
+		<url-pattern>/ex02/a/s2</url-pattern>
+	</filter-mapping>
 
+<!--  servlet -->
+	<servlet>
+		<servlet-name>Servlet01</servlet-name>
+		<servlet-class>Study.ex01.Servlet01</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>Servlet02</servlet-name>
+		<servlet-class>Study.ex01.Servlet02</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>Servlet03</servlet-name>
+		<servlet-class>Study.ex01.Servlet03</servlet-class>
+	</servlet>
 
+	<servlet-mapping>
+		<servlet-name>Servlet01</servlet-name>
+		<url-pattern>/ex01/s01</url-pattern>
+	</servlet-mapping>
 
+	<servlet-mapping>
+		<servlet-name>Servlet02</servlet-name>
+		<url-pattern>/ex01/s02</url-pattern>
+	</servlet-mapping>
 
+	<servlet-mapping>
+		<servlet-name>Servlet03</servlet-name>
+		<url-pattern>/ex01/s03</url-pattern>
+	</servlet-mapping>
 
+<!-- 리스너 -->
+<listener>
+  <listener-class>Study.ex02.Listener01</listener-class>
+</listener>
 
-
-
+<listener>
+  <listener-class>Study.ex02.Listener02</listener-class>
+</listener>
 
 
 </web-app>
